--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": ">=7.4",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.0"
     },
@@ -52,5 +52,10 @@
         "test:unit": "./vendor/bin/phpunit --testsuite Unit",
         "lint:fix": "./vendor/bin/php-cs-fixer fix --allow-risky=yes",
         "lint:show": "@lint:fix --dry-run --diff --verbose"
+    },
+    "config": {
+        "platform": {
+            "php": "7.4.1"
+        }
     }
 }
