--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
         "guzzlehttp/guzzle": "^6.5|^7.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.4",
-        "vimeo/psalm": "^4.29",
+        "friendsofphp/php-cs-fixer": "^v3.75",
+        "vimeo/psalm": "^5.26.1",
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^5.4"
     },
